Adicionado backgrounds ao modo celular

--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -51,13 +51,13 @@
             <img src="./img/cello-home.png" class="cello">
         </div>
         <nav class="index">
-            <a href="">
+            <a href="#composers">
                 <img src="./img/circle-1.png" alt="">
             </a>
-            <a href="">
+            <a href="#instruments">
                 <img src="./img/circle-2.png" alt="">
             </a>
-            <a href="">
+            <a href="#about">
                 <img src="./img/circle-3.png" alt="">
             </a>
         </nav>
