black ops quase finalizado

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -65,11 +65,18 @@
                         <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
                         <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
                     </div>
+                    <div id="linha-horizontal2"></div>    
+                    <div class="quadrado1"> 
                     <span>
                         Call of Duty: Black Ops
-                        1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. É aqui que conhecemos pela primeira vez o agente 
-                        lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. É o primeiro jogo a incluir o modo de zombies.
+                        1960, durante o auge da Guerra Fria, SAD e SOG são duas divisões da CIA que actuam atrás das linhas inimigas. 
+                        A história gira à volta de uma arma química experimental alemã roubada pelos soviéticos no fim da 2ª Guerra Mundial. 
+                        É aqui que conhecemos pela primeira vez o agente 
+                        lex Mason, aquando duma missão de assassinato de Fidel Castro, em Cuba. 
+                        É o primeiro jogo a incluir o modo de zombies.
                     </span>
+                    <div class="quadrado">SAIBA MAIS</div>
+                    </div>
                 </div>
         </section>
         <section class="bo2" id="bo2"></section>
