Ajustes nos links e backgrounds

--- a/ds1m-b/felipeflorencio/index.html
+++ b/ds1m-b/felipeflorencio/index.html
@@ -145,6 +145,9 @@
                 <h3 id="felipeflorencio">Felipe Florencio</h3>
             </div>
             <p>Estou aprendendo programação front-end e back-end. Gosto de música e também sei tocar alguns intrumentos.</p>
+            <a class="home-link" href="#home" >
+                <img id="about-button" src="./img/circle-3.png" alt="">
+            </a>
             <div class="skills">
                 <h3 class="skills__title">Habilidades</h3>
                 <ul class="skills__container">
@@ -173,6 +176,7 @@
                         <span>JAVA</span>
                     </li>
                 </ul>
+                
         </div>
         <img src="./img/bg-about.png" alt="" class="backgrounds" id="bgabout">
     </section>
