footer finalizado, porem falta terminar bo2 e bo3

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -20,9 +20,12 @@
     <link rel="stylesheet" href="./css/home.css">
     <link rel="stylesheet" href="./css/patenteImg.css">
     <link rel="stylesheet" href="./css/bo1.css">
-    <link rel="stylesheet" href="./css/imgBo1.css">
-    <link rel="stylesheet" href="./css/textos.css">
     <link rel="stylesheet" href="./css/textImg.css">
+    <link rel="stylesheet" href="./css/bo2.css">
+    <link rel="stylesheet" href="./css/textoEImage.css">
+    <link rel="stylesheet" href="./css/bo3.css">
+    <link rel="stylesheet" href="./css/textoImagem.css">
+    <link rel="stylesheet" href="./css/termos.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
@@ -61,7 +64,7 @@
         </section>
         <section class="bo1" id="bo1">
                 <div class="textImg">
-                    <div class="imagens">
+                    <div class="imagensBo1">
                         <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
                         <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
                     </div>
@@ -79,9 +82,56 @@
                     </div>
                 </div>
         </section>
-        <section class="bo2" id="bo2"></section>
-        <section class="bo3" id="bo3"></section>
+        <section class="bo2" id="bo2">
+            <div class="textoEImage">
+                <div class="imagensBo2">
+                    <img src="./img/cod-bo2-logo 1.png" alt="logoBo2" class="logo_bo2">
+                    <img src="./img/bo2_Img 1.png" alt="imgbo2" class="img_bo2">
+                </div>
+                <!-- <span>
+                    Call of Duty: Black Ops 2 é um jogo, para PS3, Xbox 360, PC e Wii U que marcou o retorno da maior franquia de tiro. O jogo apresenta uma grande novidade em relação aos títulos anteriores: um tom futurista para sua jogabilidade e 
+                    história.
+                     O jogador deve travar um combater entre humanos e robôs. 
+                     Um dos grandes destaques do game é o seu modo online, que permite batalha épicas contra outros jogadores. 
+                    pesar de trazer elementos futuristas, a série não abandona suas raízes e oferece uma narrativa com uma história 
+                    paralela que se passa nos anos 1970-80, em meio à Guerra Fria.
+                </span> -->
+            </div>
+        </section>
+        <section class="bo3" id="bo3">
+            <div class="textoImagem">
+                <div class="imagensBo3">
+                    <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
+                    <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo3" class="img_bo3">
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>footer</footer>
+    <footer>
+        <div class="termos">
+            <span>INFORMAÇÕES LEGAIS |</span>
+            <span>TERMOS DE SERVIÇO |</span>
+            <span>POLÍTICA DE PRIVACIDADE |</span>
+            <span>CARREIRAS |</span>
+            <span>POLÍTICA DE COOKIES |</span>
+            <span>SUPORTE |</span>
+            <span>CODE OF CONDUCT |</span>
+        </div>
+        <div class="linha"></div>
+        <div class="imagensFooter">
+            <div class="imagensCima">
+                <img src="./img/activision-logo 1.png" alt="activison">
+                <img src="./img/treyarch-logo 1.png" alt="treyarch">
+            </div>
+            <h1>18</h1>
+            <div class="imagensDeBaixo">
+                <img src="./img/infinity-ward-logo 1.png" alt="infinity">
+                <img src="./img/raven-logo 1.png" alt="raven">
+            </div>
+        </div>
+        <span class="meuNome">
+            © 2022 | LUCAS VINICIUS
+        </span>
+    </footer>
 </body>
 </html>
