--- a/ds1t-a/juliaSoares/index.html
+++ b/ds1t-a/juliaSoares/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet " href="./css/historia.css">
     <link rel="stylesheet" href="./css/niveis-de-torra.css">
     <link rel="stylesheet" href="./css/menu.css">
-    <link rel="stylesheet" href=".css/footer.css">
+    <link rel="stylesheet" href="./css/responsividade.css">
 
     <title>Starbucks Coffe</title>
 </head>
