--- a/ds1m-b/Paula-B/index.html
+++ b/ds1m-b/Paula-B/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Landing Page sobre gatos">
     <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/menu.css">
@@ -113,18 +114,18 @@
             <div class="racas-container">
                 <div class="raca">
                     <a href="https://petlove.com.br/maine-coon/r" class="card" target="_blank">
-                        <img class="raca__image" src="./img/maine.png" alt="">
+                        <img class="raca__image" src="./img/maine.png" alt="maine">
                     </a>
 
                 </div>
                 <div class="raca">
                     <a href="https://www.petlove.com.br/persa/r" class="card" target="_blank">
-                        <img class="raca__image" src="./img/persa.png" alt="">
+                        <img class="raca__image" src="./img/persa.png" alt="persa">
                     </a>
                 </div>
                 <div class="raca">
                     <a href="https://www.petz.com.br/gato/racas/exotico/" class="card" target="_blank">
-                        <img class="raca__image" src="./img/exotico.png" alt="">
+                        <img class="raca__image" src="./img/exotico.png" alt="exotico">
                     </a>
                 </div>
             </div>
@@ -137,19 +138,19 @@
             <div class="racas-containeer">
                 <div class="raca">
                     <a href="https://www.petz.com.br/gato/racas/angora/" class="card" target="_blank">
-                        <img class="raca__image" src="./img/angora.png" alt="">
+                        <img class="raca__image" src="./img/angora.png" alt="angora">
                     </a>
 
                 </div>
                 <div class="raca">
                     <a href="https://www.petlove.com.br/siames/r" class="card" target="_blank">
-                        <img src="./img/siames.png" alt="">
+                        <img src="./img/siames.png" alt="siames">
                     </a>
                 </div>
 
                 <div class="raca ">
                     <a href="https://www.petlove.com.br/sphynx/r" class="card" target="_blank">
-                        <img class="raca__image" src="./img/spinks.png " alt=" ">
+                        <img class="raca__image" src="./img/spinks.png " alt=" spinks">
                     </a>
                 </div>
             </div>
@@ -168,7 +169,7 @@
         <section class="cuidados" id="cuidados">
             <div class="icon">
                 <h2 class="title_main">CUIDADOS</h2>
-                <img src="./img/PATINHA.png" alt="" class="icon2">
+                <img src="./img/PATINHA.png" alt="patinha" class="icon2">
             </div>
             <div class="cuidados_container">
                 <div class="cuidado">
@@ -207,7 +208,7 @@
         <section class="curiosidades" id="curiosidades">
             <div class="icon">
                 <h2 class="title_main"> CURIOSIDADES</h2>
-                <img src="./img/CURIO.png" alt="" class="icon2">
+                <img src="./img/CURIO.png" alt="icon" class="icon2">
             </div>
             <div class="curiosidade_text">
                 <p class="text"> A estimativa é que existam, atualmente, 500 milhões de gatos domesticados pelo mundo, sendo 40 raças reconhecidas oficialmente, em média, além dos gatos sem raça definida (SRDs).
@@ -217,7 +218,7 @@
             </div>
             <div class="slideshow-container">
                 <div class="mySlides-images fade">
-                    <img src="./img/circulo.png" class="redondo" alt="">
+                    <img src="./img/circulo.png" class="redondo" alt="circulo">
                 </div>
                 <div class="mySlides-images fade">
                     <img src="./img/slide1.png" alt="Image Cat 6" />
