Responsividade se sliders

--- a/ds1t-a/juliaSoares/index.html
+++ b/ds1t-a/juliaSoares/index.html
@@ -111,7 +111,7 @@
                 <h2 class="subtitle__torra">Níveis de torra</h2>
                 <p class="text__torra">Qual a torra que você prefere? Starbucks clara, torra média ou torra escura? Estas são as torras que fazem parte dos níveis de torra Starbucks.</p>
                 <p class="button_torra">
-                    <a href="https://www.starbucksathome.com/br/blog/niveis-de-torra.html" class="button_texto">Ler atrigo</a>
+                    <a href="https://www.starbucksathome.com/br/blog/niveis-de-torra.html" class="button_texto">Ler artigo</a>
                 </p>
                 <img src="./img/livro-branco.png" alt="" class="livro-branco">
                 <p class="tempo-leitura">2 min de leitura</p>
