so falta o section bo3

--- a/ds1m-b/lucasvinicius/index.html
+++ b/ds1m-b/lucasvinicius/index.html
@@ -24,25 +24,28 @@
     <link rel="stylesheet" href="./css/bo2.css">
     <link rel="stylesheet" href="./css/textoEImage.css">
     <link rel="stylesheet" href="./css/bo3.css">
-    <link rel="stylesheet" href="./css/textoImagem.css">
     <link rel="stylesheet" href="./css/termos.css">
     <title>Call of Duty: Black Ops</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul class="menu">
+            <ul class="dropdown-menu">
                 <li>
-                    <a href="Games">GAMES</a>
-                    <a href="seta" class="seta">
-                        <i class="fas fa-caret-down"></i>
-                    </a>
+                    <a href="#" class="game">GAMES &#9660;</a>
+                    <ul class="dropdown-submenu">
+                        <li><a href="#bo1">Black Ops 1</a></li>
+                        <li><a href="#bo2">Black Ops 2</a></li>
+                        <li><a href="#bo3">Black Ops 3</a></li>
+                    </ul>
                 </li>
                 <li>
-                    <a href="Download">DOWNLOAD</a>
-                    <a href="seta" class="seta">
-                        <i class="fas fa-caret-down"></i>
-                    </a>
+                    <a href="#" class="download">DOWNLOAD &#9660;</a>
+                    <ul class="dropdown-submenu">
+                        <li><a href="https://store.steampowered.com/app/42700/Call_of_Duty_Black_Ops/" target="_blank">Black Ops 1</a></li>
+                        <li><a href="https://store.steampowered.com/agecheck/app/202970/" target="_blank">Black Ops 2</a></li>
+                        <li><a href="https://store.steampowered.com/agecheck/app/311210/" target="_blank">Black Ops 3</a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
@@ -51,6 +54,9 @@
         </div>
     </header>
     <main>
+        <a href="#" class="voltar">
+            <i class="fas fa-chevron-circle-up"></i>
+        </a>
         <section class="home" id="home">
             <h1 class="patente">
                 &#187; 
@@ -64,8 +70,10 @@
         </section>
         <section class="bo1" id="bo1">
                 <div class="textImg">
-                    <div class="imagensBo1">
-                        <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
+                    <div class="imagensBo1EBo2">
+                        <a href="https://www.callofduty.com/blackops" target="_blank">
+                            <img src="./img/cod-bo-logo 1.png" alt="logoBo1" class="logo_bo1">
+                        </a>
                         <img src="./img/2011-05-20-codlackops-5 1.png" alt="imgbo1" class="img_bo1">
                     </div>
                     <div id="linha-horizontal2"></div>    
@@ -85,6 +93,7 @@
         <section class="bo2" id="bo2">
             <div class="textoEImage">
                 <div class="imagensBo2">
+                    <a href="https://www.callofduty.com/blackops2" target="_blank">
                     <img src="./img/cod-bo2-logo 1.png" alt="logoBo2" class="logo_bo2">
                     <img src="./img/bo2_Img 1.png" alt="imgbo2" class="img_bo2">
                 </div>
@@ -99,39 +108,75 @@
             </div>
         </section>
         <section class="bo3" id="bo3">
-            <div class="textoImagem">
-                <div class="imagensBo3">
+            <div class="textImg">
+                <div class="imagensBo1EBo2">
                     <img src="./img/codbo3-logo 1.png" alt="logoBo3" class="logo_bo3">
-                    <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo3" class="img_bo3">
+                    <img src="./img/DLC3_KremlinNew 1.png" alt="imgbo1" class="img_bo3">
+                </div>
+                <div id="linha-horizontal22"></div>    
+                <div class="quadrado1"> 
+                <span>
+                    Call Of Duty: Black Ops 3 foi
+                    desenvolvido pela Treyarch. Lançado para Xbox One, PS4, Xbox 360, PlayStation 3 e PC
+                    , o jogo dá continuidade à longa tradição da franquia em multiplayer online, e também revitaliza o modo campanha com algumas novidades. 
+                    Ambientado em 2065, o enredo destaca os eventos e combates do esquadrão Black Ops, e aposta nas tradicionais passagens cinematográficas 
+                    que fizeram a fama da 
+                    franquia desde as primeiras versões.
+                </span>
+                <div class="quadrado">SAIBA MAIS</div>
                 </div>
             </div>
         </section>
     </main>
     <footer>
         <div class="termos">
-            <span>INFORMAÇÕES LEGAIS |</span>
-            <span>TERMOS DE SERVIÇO |</span>
-            <span>POLÍTICA DE PRIVACIDADE |</span>
-            <span>CARREIRAS |</span>
-            <span>POLÍTICA DE COOKIES |</span>
-            <span>SUPORTE |</span>
-            <span>CODE OF CONDUCT |</span>
+            <a href="https://www.activision.com/br/pt/legal" target="_blank">
+                <span>INFORMAÇÕES LEGAIS |</span>
+            </a>
+            <a href="https://www.activision.com/br/pt/legal/terms-of-use" target="_blank">
+                <span>TERMOS DE SERVIÇO |</span>
+            </a>
+            <a href="https://www.activision.com/br/pt/legal/privacy-policy" target="_blank">
+                <span>POLÍTICA DE PRIVACIDADE |</span>
+            </a>
+            <a href="https://careers.activision.com/" target="_blank">
+                <span>CARREIRAS |</span>
+            </a>
+            <a href="https://www.activision.com/br/pt/legal/cookie-policy" target="_blank">
+                <span>POLÍTICA DE COOKIES |</span>
+            </a>
+            <a href="https://support.activision.com/" target="_blank">
+                <span>SUPORTE |</span>
+            </a>
+            <a href="https://www.callofduty.com/br/pt/values" target="_blank">
+                <span>CODE OF CONDUCT |</span>
+            </a>
         </div>
         <div class="linha"></div>
         <div class="imagensFooter">
             <div class="imagensCima">
-                <img src="./img/activision-logo 1.png" alt="activison">
-                <img src="./img/treyarch-logo 1.png" alt="treyarch">
+                <a href="https://www.activision.com/" target="_blank">
+                    <img src="./img/activision-logo 1.png" alt="activison">
+                </a>
+                <a href="https://www.treyarch.com/">
+                    <img src="./img/treyarch-logo 1.png" alt="treyarch">
+                </a>
             </div>
             <h1>18</h1>
             <div class="imagensDeBaixo">
-                <img src="./img/infinity-ward-logo 1.png" alt="infinity">
-                <img src="./img/raven-logo 1.png" alt="raven">
+                <a href="https://www.infinityward.com/" target="_blank">
+                    <img src="./img/infinity-ward-logo 1.png" alt="infinity">
+                </a>
+                <a href="https://www.ravensoftware.com/">
+                    <img src="./img/raven-logo 1.png" alt="raven">
+                </a>
             </div>
         </div>
-        <span class="meuNome">
-            © 2022 | LUCAS VINICIUS
-        </span>
+        <a href="https://www.linkedin.com/in/lucas-vinicius-silva-686157219?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BJXIhk4rVTzGhbhnjWjY1Eg%3D%3D" class="meuNome">
+            <span>
+                © 2022 | LUCAS VINICIUS
+            </span>
+        </a>
     </footer>
 </body>
 </html>
